Examples/2024-04-panoptic/result/slither_contracts/SemiFungiblePositionManager.txt
'forge config --json' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.25/solc-0.8.25 --version' running
'/Users/tanzezhong/.solc-select/artifacts/solc-0.8.25/solc-0.8.25 forge-std/=lib/forge-std/src/ @openzeppelin/=lib/openzeppelin-contracts/ solmate/=lib/solmate/src/ univ3-core/=lib/v3-core/contracts/ univ3-periphery/=lib/v3-periphery/contracts/ @contracts/=contracts/ @libraries/=contracts/libraries/ @multicall/=contracts/multicall/ @periphery/=periphery/ @tokens/=contracts/tokens/ @types/=contracts/types/ @scripts/=scripts/ @uniswap/=lib/ ds-test/=lib/forge-std/lib/ds-test/src/ openzeppelin-contracts/=lib/openzeppelin-contracts/ v3-core/=lib/v3-core/contracts/ v3-periphery/=lib/v3-periphery/contracts/ /Users/tanzezhong/GPT4Bugs-main/Examples/2024-04-panoptic/contracts/SemiFungiblePositionManager.sol --combined-json abi,ast,bin,bin-runtime,srcmap,srcmap-runtime,userdoc,devdoc,hashes --optimize --optimize-runs 1 --evm-version paris --allow-paths .,/Users/tanzezhong/GPT4Bugs-main/Examples/2024-04-panoptic/contracts' running
Compilation warnings/errors on /Users/tanzezhong/GPT4Bugs-main/Examples/2024-04-panoptic/contracts/SemiFungiblePositionManager.sol:
Error: Source "tokens/ERC1155Minimal.sol" not found: File not found. Searched the following locations: "".
 --> contracts/SemiFungiblePositionManager.sol:8:1:
  |
8 | import   {ERC1155} from "tokens/ERC1155Minimal.sol";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "multicall/Multicall.sol" not found: File not found. Searched the following locations: "".
 --> contracts/SemiFungiblePositionManager.sol:9:1:
  |
9 | import  {Multicall} from "multicall/Multicall.sol";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/CallbackLib.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:11:1:
   |
11 | import   {CallbackLib} from "libraries/CallbackLib.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/Constants.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:12:1:
   |
12 | import   {Constants} from "libraries/Constants.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/Errors.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:13:1:
   |
13 | import   {Errors} from "libraries/Errors.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/FeesCalc.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:14:1:
   |
14 | import   {FeesCalc} from "libraries/FeesCalc.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/Math.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:15:1:
   |
15 | import   {Math} from "libraries/Math.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/PanopticMath.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:16:1:
   |
16 | import   {PanopticMath} from "libraries/PanopticMath.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "libraries/SafeTransferLib.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:17:1:
   |
17 | import   {SafeTransferLib} from "libraries/SafeTransferLib.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "types/LeftRight.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:19:1:
   |
19 | import   {LeftRightUnsigned, LeftRightSigned, LeftRightLibrary} from "types/LeftRight.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "types/LiquidityChunk.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:20:1:
   |
20 | import   {LiquidityChunk} from "types/LiquidityChunk.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: Source "types/TokenId.sol" not found: File not found. Searched the following locations: "".
  --> contracts/SemiFungiblePositionManager.sol:21:1:
   |
21 | import   {TokenId} from "types/TokenId.sol";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


ERROR:Slither:Unable to compile all targets.
